--- a/marmelad/_blocks/feature-map/feature-map.styl
+++ b/marmelad/_blocks/feature-map/feature-map.styl
@@ -15,3 +15,57 @@
     .ymaps-2-1-79-ground-pane
       filter: url('data:image/svg+xml;utf8,<svg xmlns=\"http://www.w3.org/2000/svg\"><filter id=\"grayscale\"><feColorMatrix type=\"matrix\" values=\"0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\"/></filter></svg>#grayscale')
       filter: grayscale(100%)
+
+.popup-map-thumb
+  max-width: 270px
+  width: 100%
+  display: flex
+
+  &__body
+    width: 100%
+    display: flex
+    flex-direction: column
+    background-color: #FFFFFF
+    box-shadow: 10px 10px 16px rgba(0, 0, 0, 0.09)
+    border-radius: 12px 12px 12px 0px
+    padding: 8px 7px 16px 7px
+
+  &__img
+    box-shadow: 10px 10px 16px rgba(0, 0, 0, 0.09)
+    border-radius: 4px
+    height: 150px
+    overflow: hidden
+    margin-bottom: 20px
+
+    img
+      width: 100%
+      height: 100%
+      object-fit: cover
+      vertical-align: top
+
+  &__content
+    padding-right: 20px
+    padding-left: 20px
+
+  &__name
+    font-size: 16px
+    color: #515151
+    font-weight: 500
+    line-height: 1.1
+    margin-bottom: 15px
+
+  &__text
+    font-size: 15px
+    color: #8D8D8D
+    font-weight: 500
+    line-height: 1.1
+    margin-bottom: 15px
+
+  &__link-show
+    font-size: 17px
+    padding-top: 8px
+    padding-bottom: 12px
+
+.popover-inner
+  ymaps
+    box-shadow: 10px 10px 16px rgba(0, 0, 0, 0.09)
