added local fonts

--- a/marmelad/styles/app.styl
+++ b/marmelad/styles/app.styl
@@ -2,13 +2,14 @@
 @require 'components/_mixins';
 @require 'components/normalize';
 @require 'components/iconizer';
+@require 'components/fonts';
 // @require 'components/wordpress';
 
 *
   min-width 0
   min-height 0
   box-sizing: border-box
-  -webkit-tap-highlight-color rgba(0,0,0, 0)
+  -webkit-tap-highlight-color rgba(226, 176, 176, 0)
 
   &::before,
   &::after
